--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"name": "dnadesign/silverstripe-datedropdownselectorfield",
 	"description": "Select your date values with Dropdown Fields",
-	"type": "silverstripe-module",
+	"type": "silverstripe-vendormodule",
 	"keywords": ["silverstripe", "date", "dropdown"],
 	"license": "BSD-3-Clause",
 	"authors": [{
@@ -9,9 +9,19 @@
 		"email": "john.milmine@dna.co.nz"
 	}],
 	"require": {
-		"silverstripe/framework": "3.*"
+		"silverstripe/framework": "^4"
+	},
+
+    "autoload": {
+		"psr-4": {
+			"DNADesign\\SilverstripeDatedropdownselectorfield\\": "code/",
+			"DNADesign\\SilverstripeDatedropdownselectorfield\\Tests\\": "tests/"
+		}
 	},
 	"extra" : {
-		"installer-name": "datedropdownselectorfield"
+		"installer-name": "datedropdownselectorfield",
+		"expose" : [
+			"css"
+		]
 	}
 }
