--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,24 @@
-# See https://github.com/silverstripe-labs/silverstripe-travis-support for setup details
-
-language: php 
-php: 
- - 5.3
-
-sudo: false
+language: php
 
 env:
- - DB=MYSQL CORE_RELEASE=3.1
- - DB=PGSQL CORE_RELEASE=3
+  global:
+    - COMPOSER_ROOT_VERSION=4.x-dev
 
 matrix:
   include:
-    - php: 5.4
-      env: DB=MYSQL CORE_RELEASE=3
+    - php: 7.1
+      env: DB=MYSQL
+    - php: 7.2
+      env: DB=MYSQL
+    - php: 7.3
+      env: DB=MYSQL
 
 before_script:
- - git clone git://github.com/silverstripe-labs/silverstripe-travis-support.git ~/travis-support
- - php ~/travis-support/travis_setup.php --source `pwd` --target ~/builds/ss
- - cd ~/builds/ss
+  - phpenv rehash
+  - phpenv config-rm xdebug.ini
 
-script: 
- - phpunit dateddropdownselectorfield/tests/
+  - composer validate
+  - composer install --prefer-source --no-interaction --no-progress --no-suggest --optimize-autoloader --verbose --profile
+
+script:
+  - vendor/bin/phpunit
